<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/edtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/between_views"
            android:hint="@string/franchiseeLocationHintText"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/edtFranchiseeID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtLocation"
            android:layout_margin="@dimen/between_views"
            android:hint="@string/franchiseeIDHintText"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/edtFranchiseePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtFranchiseeID"
            android:layout_margin="@dimen/between_views"
            android:hint="@string/franchiseePasswordHintText"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/edtFranchiseeConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtFranchiseePass"
            android:layout_margin="@dimen/between_views"
            android:hint="@string/confirm_pass"
            android:singleLine="true"/>

        <Button
            android:id="@+id/btnAddFranchisee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtFranchiseeConfirmPass"
            android:layout_margin="@dimen/between_views"
            android:text="@string/franchiseeAddButtonText"/>

    </RelativeLayout>
</ScrollView>