<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="40dip"
              android:paddingLeft="50dip"
              android:paddingRight="40dip"
              android:paddingTop="40dip">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      android:orientation="vertical"
      android:paddingBottom="20dip"
      android:paddingTop="20dip">

    <Button
        android:id="@+id/btnAddFranchiseeOption"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/optionAddFranchiseeButtonText" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      android:orientation="vertical"
      android:paddingBottom="20dip"
      android:paddingTop="20dip">

    <Button
        android:id="@+id/btnGetReportsOption"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/optionGetReportsButtonText" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      android:orientation="vertical"
      android:paddingBottom="20dip"
      android:paddingTop="20dip">

    <Button
        android:id="@+id/btnDeleteFranchisee"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/franchiseeDeleteButtonText" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      android:orientation="vertical"
      android:paddingBottom="20dip"
      android:paddingTop="20dip">

    <Button
        android:id="@+id/btnActivateFranchisee"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/franchiseeActivateButtonText" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      android:orientation="vertical"
      android:paddingBottom="10dip"
      android:paddingTop="10dip"
      android:visibility="gone">

    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/changePassButtonText" />
  </LinearLayout>
</LinearLayout>