<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingLeft="40dip"
      android:paddingRight="40dip">

    <EditText
        android:id="@+id/edtOldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/oldPassword"
        android:singleLine="true">

      <requestFocus />
    </EditText>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingLeft="40dip"
      android:paddingRight="40dip">

    <EditText
        android:id="@+id/edtNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/newPassword"
        android:singleLine="true" />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      android:gravity="top"
      android:orientation="vertical"
      android:paddingBottom="20dip"
      android:paddingLeft="70dip"
      android:paddingRight="70dip"
      android:paddingTop="10dip">

    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/changePassBtnText" />
  </LinearLayout>

</LinearLayout>